--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,5 @@
 {
-  "packages": [
-    "packages/*",
-    "apps/*"
-  ],
-  "version": "0.0.0",
+  "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
