--- a/apps/psp-front/package.json
+++ b/apps/psp-front/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "psp-front",
+  "name": "@team21/psp-front",
   "version": "0.1.0",
-  "private": true,
+  
   "dependencies": {
+    "@craco/craco": "^6.4.0",
+    "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,9 +19,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
