--- a/apps/psp-front/package.json
+++ b/apps/psp-front/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@team21/psp-front",
   "version": "0.1.0",
-  
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "@craco/craco": "^6.4.0",
     "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,8 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "craco start",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.7"
   }
 }
