--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "workspaces": [
     "packages/*",
-    "apps/*"
+    "apps/*",
+    "apps/psp-back/actions/"
   ],
   "name": "team21",
   "private": true,
   "devDependencies": {
+    "@rushstack/eslint-patch": "1.0.2",
+    "@types/express": "^4.17.5",
+    "@types/jest": "^25.2.1",
+    "@types/joi": "^14.3.4",
+    "@types/node": "^16.11.7",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "autoprefixer": "9",
     "craco-eslint-webpack-plugin": "^1.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "jest": "^25.3.0",
     "lerna": "^4.0.0",
     "postcss": "7",
+    "supertest": "^4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "@rushstack/eslint-patch": "1.0.2"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^4.4.4"
   }
 }
