--- a/apps/psp-back/actions/tsconfig.json
+++ b/apps/psp-back/actions/tsconfig.json
@@ -8,7 +8,7 @@
     "rootDir": ".",
     "sourceMap": true,
     "target": "es6",
-    "types": ["node", "jest"]
+    "types": ["node"]
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts", "package.json"]
