--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-webpack-plugin": "^3.1.1",
     "jest": "^25.3.0",
     "lerna": "^4.0.0",
     "postcss": "7",
