--- a/apps/psp-back/actions/package.json
+++ b/apps/psp-back/actions/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.17",
     "@hapi/boom": "^9.1.0",
+    "@team21/ui-components": "^0.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
