--- a/apps/psp-front/package.json
+++ b/apps/psp-front/package.json
@@ -5,6 +5,7 @@
     "@apollo/client": "^3.4.17",
     "@craco/craco": "^6.4.0",
     "@tailwindcss/forms": "^0.3.4",
+    "@team21/ui-components": "^0.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "graphql": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
