--- a/apps/psp-back/hasura/metadata/actions.yaml
+++ b/apps/psp-back/hasura/metadata/actions.yaml
@@ -1,6 +1,14 @@
-actions: []
+actions:
+- name: rand
+  definition:
+    kind: ""
+    handler: '{{ACTION_BASE_ENDPOINT}}/api/custom/random'
+  permissions:
+  - role: ANONYMOUS
 custom_types:
   enums: []
-  input_objects: []
-  objects: []
+  input_objects:
+  - name: RandInput
+  objects:
+  - name: RandOutput
   scalars: []
