--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -2,8 +2,8 @@
   "name": "@team21/ui-components",
   "version": "0.1.0",
   "main": "index.ts",
-  "source":"index.ts",
-  "module":"index.ts",
+  "source": "index.ts",
+  "module": "index.ts",
   "types": "dist/index.d.ts",
   "dependencies": {
     "@craco/craco": "^6.4.0",
@@ -15,6 +15,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
