add hasura permissions

--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
@@ -7,5 +7,12 @@ array_relationships:
     foreign_key_constraint_on:
       column: category_id
       table:
-        name: product
+        name: products
         schema: public
+select_permissions:
+- permission:
+    columns:
+    - name
+    - id
+    filter: {}
+  role: ANONYMOUS
