--- a/apps/web-shop-front/package.json
+++ b/apps/web-shop-front/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.17",
     "@craco/craco": "^6.4.0",
+    "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.3.4",
     "@team21/ui-components": "^0.1.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,8 +15,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "graphql": "^16.0.1",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
   },
