--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-webpack-plugin": "^3.1.1",
+    "husky": "^7.0.4",
     "jest": "^25.3.0",
     "lerna": "^4.0.0",
     "postcss": "7",
@@ -33,5 +34,15 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^4.4.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint"
+    ]
   }
 }
