--- a/apps/psp-back/actions/tsconfig.json
+++ b/apps/psp-back/actions/tsconfig.json
@@ -8,8 +8,9 @@
     "rootDir": ".",
     "sourceMap": true,
     "target": "es6",
-    "types": ["node"]
+    "types": ["node"],
+    "paths": {"@src/*": ["src/*"]}
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.ts", "package.json"]
+  "include": ["src/**/*.ts", "package.json"],
 }
