--- a/apps/psp-back/hasura/metadata/databases/default/tables/tables.yaml
+++ b/apps/psp-back/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,2 +1,6 @@
-- "!include public_notes.yaml"
+- "!include public_api_keys.yaml"
+- "!include public_api_provider_link.yaml"
+- "!include public_one_time_payment_links.yaml"
+- "!include public_payment_providers.yaml"
+- "!include public_transactions.yaml"
 - "!include public_users.yaml"
