--- a/apps/paypal-provider/package.json
+++ b/apps/paypal-provider/package.json
@@ -12,6 +12,7 @@
     "lint-fix": "yarn run lint --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@paypal/paypal-js": "^4.2.1",
@@ -19,6 +20,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9.8.6",
+    "cross-fetch": "^3.1.4",
     "file-type": "^16.5.3",
     "form-data": "^4.0.0",
     "next": "12",
