--- a/apps/psp-back/hasura/metadata/databases/default/tables/public_api_keys.yaml
+++ b/apps/psp-back/hasura/metadata/databases/default/tables/public_api_keys.yaml
@@ -2,13 +2,20 @@ table:
   name: api_keys
   schema: public
 object_relationships:
-- name: api_provider_link
+- name: user
+  using:
+    foreign_key_constraint_on: user_id
+array_relationships:
+- name: api_provider_links
   using:
     foreign_key_constraint_on:
       column: api_key_id
       table:
         name: api_provider_link
         schema: public
-- name: user
-  using:
-    foreign_key_constraint_on: user_id
+select_permissions:
+- permission:
+    columns:
+    - api_key
+    filter: {}
+  role: ANONYMOUS
