--- a/apps/psp-back/hasura/metadata/databases/default/tables/public_one_time_payment_links.yaml
+++ b/apps/psp-back/hasura/metadata/databases/default/tables/public_one_time_payment_links.yaml
@@ -1,3 +1,7 @@
 table:
   name: one_time_payment_links
   schema: public
+object_relationships:
+- name: apiKeyByApiKey
+  using:
+    foreign_key_constraint_on: api_key
