--- a/apps/web-shop-back/actions/package.json
+++ b/apps/web-shop-back/actions/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@apollo/client": "^3.4.17",
     "@hapi/boom": "^9.1.0",
-    "@team21/ui-components": "^0.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-oas-generator": "^1.0.23",
