feat-jwt-token-setup

--- a/apps/web-shop-back/actions/.env
+++ b/apps/web-shop-back/actions/.env
@@ -2,3 +2,4 @@ PORT = 2389
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
 HGE_ENDPOINT = http://localhost:8081
+TOKEN_KEY =somerandompasswordsomerandompasswordsomerandompassword
