--- a/apps/web-shop-back/actions/package.json
+++ b/apps/web-shop-back/actions/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-oas-generator": "^1.0.23",
     "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-fetch": "^3.1.0",
     "tsconfig-paths": "^3.9.0"
