feat-permissions-role-user

--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
@@ -16,3 +16,9 @@ select_permissions:
     - id
     filter: {}
   role: ANONYMOUS
+- permission:
+    columns:
+    - name
+    - id
+    filter: {}
+  role: USER
