--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_products.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_products.yaml
@@ -18,3 +18,14 @@ select_permissions:
     - price
     filter: {}
   role: ANONYMOUS
+- permission:
+    columns:
+    - name
+    - image
+    - description
+    - quantity
+    - id
+    - category_id
+    - price
+    filter: {}
+  role: USER
