--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
@@ -11,6 +11,7 @@ array_relationships:
         schema: public
 select_permissions:
 - permission:
+    allow_aggregations: true
     columns:
     - name
     - id
