--- a/apps/psp-back/hasura/metadata/databases/default/tables/public_api_keys.yaml
+++ b/apps/psp-back/hasura/metadata/databases/default/tables/public_api_keys.yaml
@@ -13,9 +13,26 @@ array_relationships:
       table:
         name: api_provider_link
         schema: public
+insert_permissions:
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - user_id
+  role: ANONYMOUS
+- permission:
+    backend_only: false
+    check: {}
+    columns: []
+    set:
+      user_id: x-hasura-User-Id
+  role: USER
 select_permissions:
 - permission:
     columns:
+    - active
     - api_key
+    - api_secret
+    - user_id
     filter: {}
   role: ANONYMOUS
