--- a/apps/psp-back/hasura/metadata/databases/default/tables/public_api_provider_link.yaml
+++ b/apps/psp-back/hasura/metadata/databases/default/tables/public_api_provider_link.yaml
@@ -15,3 +15,7 @@ select_permissions:
     - payment_provider_id
     filter: {}
   role: ANONYMOUS
+delete_permissions:
+- permission:
+    filter: {}
+  role: ANONYMOUS
