chore: minor fixes

--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
@@ -13,7 +13,8 @@ select_permissions:
 - permission:
     allow_aggregations: true
     columns:
-    - name
     - id
+    - image
+    - name
     filter: {}
   role: ANONYMOUS
