--- a/apps/web-shop-back/actions/package.json
+++ b/apps/web-shop-back/actions/package.json
@@ -29,10 +29,13 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.1.0",
     "tsconfig-paths": "^3.9.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.6",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^4.4.4"
   }
