--- a/apps/web-shop-back/docker-compose.yaml
+++ b/apps/web-shop-back/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgrespassword
   graphql-engine:
-    image: hasura/graphql-engine:v2.0.0-alpha.11
+    image: fedormelexin/graphql-engine-arm64:v2.1.0-beta.2
     ports:
     - "8081:8080"
     depends_on:
