add: psp endpoint address

--- a/apps/web-shop-back/actions/.env
+++ b/apps/web-shop-back/actions/.env
@@ -3,3 +3,4 @@ HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
 HGE_ENDPOINT = http://localhost:8081
 TOKEN_KEY =somerandompasswordsomerandompasswordsomerandompassword
+PSP_ENDPOINT=http://localhost:8080
