--- a/apps/web-shop-back/actions/.env
+++ b/apps/web-shop-back/actions/.env
@@ -4,3 +4,5 @@ HGE_ADMIN_SECRET = admin-secret
 HGE_ENDPOINT = http://localhost:8081
 TOKEN_KEY =somerandompasswordsomerandompasswordsomerandompassword
 PSP_ENDPOINT=http://localhost:8080
+PSP_API_KEY=9cc20cf2-3fe6-42d4-a703-7c0bc575294c
+PSP_API_SECRET=bb9a12df-c720-47af-bfad-917c100582d5
