--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_product_categories.yaml
@@ -19,8 +19,10 @@ select_permissions:
     filter: {}
   role: ANONYMOUS
 - permission:
+    allow_aggregations: true
     columns:
-    - name
     - id
+    - image
+    - name
     filter: {}
   role: USER
