--- a/apps/psp-back/docker-compose.yaml
+++ b/apps/psp-back/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     depends_on:
     - "postgres"
     restart: always
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
       ## enable the console served by server
