--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_products.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_products.yaml
@@ -19,6 +19,7 @@ select_permissions:
     filter: {}
   role: ANONYMOUS
 - permission:
+    allow_aggregations: true
     columns:
     - name
     - image
