--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/tables.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,3 +1,5 @@
+- "!include public_cart.yaml"
+- "!include public_cart_item.yaml"
 - "!include public_orders.yaml"
 - "!include public_product_categories.yaml"
 - "!include public_products.yaml"
