--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_orders.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_orders.yaml
@@ -2,9 +2,49 @@ table:
   name: orders
   schema: public
 object_relationships:
-- name: product
-  using:
-    foreign_key_constraint_on: product_id
 - name: user
   using:
     foreign_key_constraint_on: user_id
+array_relationships:
+- name: orderProducts
+  using:
+    foreign_key_constraint_on:
+      column: order_id
+      table:
+        name: order_products
+        schema: public
+insert_permissions:
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - order_products
+    - total_price
+    - address
+    - city
+    - country
+    - first_name
+    - last_name
+    - phone
+    - zip_code
+    - created_at
+    - id
+    - user_id
+  role: USER
+select_permissions:
+- permission:
+    columns:
+    - id
+    - user_id
+    - total_price
+    - created_at
+    - first_name
+    - last_name
+    - country
+    - city
+    - address
+    - phone
+    - zip_code
+    - order_products
+    filter: {}
+  role: USER
