--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_users.yaml
@@ -2,6 +2,13 @@ table:
   name: users
   schema: public
 array_relationships:
+- name: cart
+  using:
+    foreign_key_constraint_on:
+      column: user_id
+      table:
+        name: cart
+        schema: public
 - name: orders
   using:
     foreign_key_constraint_on:
