--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.20.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.1.2"
   },
   "eslintConfig": {
