chore: add column for order

--- a/apps/web-shop-back/hasura/metadata/actions.yaml
+++ b/apps/web-shop-back/hasura/metadata/actions.yaml
@@ -23,4 +23,5 @@ custom_types:
   - name: LoginResponse
   - name: RegistrationResponse
   - name: CheckoutOutput
+  - name: CartResponse
   scalars: []
