--- a/apps/psp/.env
+++ b/apps/psp/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_HGE_ENDPOINT = http://localhost:8080
 SKIP_PREFLIGHT_CHECK=true
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
+TOKEN_KEY =somerandompasswordsomerandompasswordsomerandompassword
