--- a/apps/psp/package.json
+++ b/apps/psp/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
