--- a/apps/psp/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/public_users.yaml
@@ -1,10 +1,11 @@
 table:
   name: users
   schema: public
-select_permissions:
-- permission:
-    columns:
-    - id
-    - username
-    filter: {}
-  role: ANONYMOUS
+array_relationships:
+- name: api_keys
+  using:
+    foreign_key_constraint_on:
+      column: user_id
+      table:
+        name: api_keys
+        schema: public
