--- a/apps/psp/hasura/metadata/databases/default/tables/public_payment_intents.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/public_payment_intents.yaml
@@ -5,3 +5,10 @@ object_relationships:
 - name: apiKeyByApiKey
   using:
     foreign_key_constraint_on: api_key
+- name: order
+  using:
+    foreign_key_constraint_on:
+      column: payment_intent_id
+      table:
+        name: orders
+        schema: public
