--- a/apps/web-shop-back/hasura/metadata/actions.yaml
+++ b/apps/web-shop-back/hasura/metadata/actions.yaml
@@ -3,6 +3,18 @@ actions:
   definition:
     kind: synchronous
     handler: '{{ACTION_BASE_ENDPOINT}}/api/order/create-payment-intent'
+- name: createPaymentIntent
+  definition:
+    kind: synchronous
+    handler: '{{ACTION_BASE_ENDPOINT}}/api/order/create-payment-intent'
+  permissions:
+  - role: USER
+- name: finalizeOrder
+  definition:
+    kind: synchronous
+    handler: '{{ACTION_BASE_ENDPOINT}}/api/order/finalize'
+  permissions:
+  - role: USER
 - name: login
   definition:
     kind: synchronous
@@ -19,9 +31,13 @@ custom_types:
   enums: []
   input_objects:
   - name: CheckoutInput
+  - name: CreatePaymentIntentInput
+  - name: FinalizeOrderInput
   objects:
   - name: LoginResponse
   - name: RegistrationResponse
   - name: CheckoutOutput
   - name: CartResponse
+  - name: CreatePaymentIntentOutput
+  - name: FinalizeOrderOutput
   scalars: []
