--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_orders.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_orders.yaml
@@ -30,6 +30,8 @@ insert_permissions:
     - created_at
     - id
     - user_id
+    set:
+      user_id: x-hasura-User-Id
   role: USER
 select_permissions:
 - permission:
