update: finalize order functionality

--- a/apps/web-shop-front/.env
+++ b/apps/web-shop-front/.env
@@ -1,3 +1,4 @@
 REACT_APP_HGE_ENDPOINT = http://localhost:8081
 SKIP_PREFLIGHT_CHECK=true
 PORT=3001
+REACT_APP_PSP_API_KEY=7b273382-9ac1-4728-8489-2b93b6f59fae
