--- a/apps/paypal-provider/package.json
+++ b/apps/paypal-provider/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev -p 1234",
+    "start": "next dev -p 1234",
     "build": "next build",
     "build-prod": "next build",
-    "start": "next start v",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet",
     "lint-fix": "yarn run lint --fix"
