--- a/apps/web-shop-front/package.json
+++ b/apps/web-shop-front/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start": "craco start",
+    "dev": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
