--- a/apps/paypal-provider/package.json
+++ b/apps/paypal-provider/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.1",
     "react-query": "^3.25.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
