create private route, add qty validation and qty update after creating order

--- a/apps/web-shop-back/hasura/metadata/databases/default/tables/public_products.yaml
+++ b/apps/web-shop-back/hasura/metadata/databases/default/tables/public_products.yaml
@@ -30,3 +30,10 @@ select_permissions:
     - price
     filter: {}
   role: USER
+update_permissions:
+- permission:
+    check: null
+    columns:
+    - quantity
+    filter: {}
+  role: USER
