--- a/apps/psp/hasura/metadata/databases/default/tables/public_api_provider_link.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/public_api_provider_link.yaml
@@ -11,6 +11,11 @@ object_relationships:
 select_permissions:
 - permission:
     columns:
+    - payment_provider_id
+    filter: {}
+  role: ANONYMOUS
+- permission:
+    columns:
     - api_key_id
     - payment_provider_id
     filter:
