--- a/apps/psp/hasura/metadata/databases/default/tables/public_payment_providers.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/public_payment_providers.yaml
@@ -10,4 +10,13 @@ select_permissions:
     - logo
     - name
     filter: {}
+  role: ANONYMOUS
+- permission:
+    columns:
+    - active
+    - base_url
+    - id
+    - logo
+    - name
+    filter: {}
   role: USER
