--- a/apps/psp/hasura/metadata/databases/default/tables/public_api_keys.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/public_api_keys.yaml
@@ -24,6 +24,11 @@ insert_permissions:
 select_permissions:
 - permission:
     columns:
+    - api_key
+    filter: {}
+  role: ANONYMOUS
+- permission:
+    columns:
     - active
     - api_key
     - api_secret
