--- a/apps/psp/hasura/metadata/databases/default/tables/tables.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,5 +1,6 @@
 - "!include public_api_keys.yaml"
 - "!include public_api_provider_link.yaml"
+- "!include public_banks.yaml"
 - "!include public_orders.yaml"
 - "!include public_payment_intents.yaml"
 - "!include public_payment_providers.yaml"
