--- a/apps/bank/.env
+++ b/apps/bank/.env
@@ -3,3 +3,5 @@ SKIP_PREFLIGHT_CHECK=true
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
 NEXT_PUBLIC_HOST_ADDRESS=http://localhost:1111
+BANK_ID=044
+BANK_CARD_ID=036606
