--- a/apps/bank/package.json
+++ b/apps/bank/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bcryptjs": "^2.4.3",
+    "card-number-generator": "^0.0.2",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "^12.0.7",
