--- a/apps/web-shop-front/tsconfig.json
+++ b/apps/web-shop-front/tsconfig.json
@@ -20,7 +20,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "composite": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "strictNullChecks": false
   },
   "include": [
     "src"
