--- a/apps/bank/package.json
+++ b/apps/bank/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "^12.0.7",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.1.2",
