addd bank-related stuff

--- a/apps/bank/.env
+++ b/apps/bank/.env
@@ -5,3 +5,4 @@ HGE_ADMIN_SECRET = admin-secret
 NEXT_PUBLIC_HOST_ADDRESS=http://localhost:1111
 BANK_ID=044
 BANK_CARD_ID=036606
+PCC_BASE_ADDRESS=http://localhost:2222
