--- a/Dockerfile.webshop2actions
+++ b/Dockerfile.webshop2actions
@@ -2,5 +2,5 @@ FROM node:16.1-alpine3.13 as base
 WORKDIR /app/
 COPY . .
 COPY ./.yarn/releases/yarn-1.18.0.cjs ./.yarn/releases/yarn-1.18.0.cjs
-WORKDIR /app/apps/bank
+WORKDIR /app/apps/web-shop-back2/actions
 CMD ["yarn","run","dev"]
