--- a/apps/web-shop-back2/hasura/metadata/actions.yaml
+++ b/apps/web-shop-back2/hasura/metadata/actions.yaml
@@ -13,6 +13,8 @@ actions:
   definition:
     kind: synchronous
     handler: '{{ACTION_BASE_ENDPOINT}}/api/order/create-wage-intent'
+  permissions:
+  - role: USER
 - name: finalizeOrder
   definition:
     kind: synchronous
