--- a/apps/web-shop-back2/actions/.env
+++ b/apps/web-shop-back2/actions/.env
@@ -8,3 +8,5 @@ PSP_API_KEY=7b273382-9ac1-4728-8489-2b93b6f59fae
 PSP_API_SECRET=b5c81921-db55-45f8-817e-ac91cbd08200
 PSP_KEY_HEADER=X-Hasura-PSP_API_KEY
 PSP_SECRET_HEADER=X-Hasura-PSP_SECRET
+API_KEY_WAGE=75ba3303-0653-4af8-8708-08446f5b3a04
+API_SECRET_WAGE=e496a166-f223-40de-b336-6580531be741
