--- a/apps/psp/hasura/metadata/databases/default/tables/public_payment_providers.yaml
+++ b/apps/psp/hasura/metadata/databases/default/tables/public_payment_providers.yaml
@@ -9,6 +9,7 @@ select_permissions:
     - id
     - logo
     - name
+    - subscription
     filter: {}
   role: ANONYMOUS
 - permission:
@@ -18,5 +19,6 @@ select_permissions:
     - id
     - logo
     - name
+    - subscription
     filter: {}
   role: USER
