--- a/apps/web-shop-back2/hasura/metadata/databases/default/tables/public_subscriptions.yaml
+++ b/apps/web-shop-back2/hasura/metadata/databases/default/tables/public_subscriptions.yaml
@@ -5,6 +5,9 @@ object_relationships:
 - name: product
   using:
     foreign_key_constraint_on: course
+- name: user
+  using:
+    foreign_key_constraint_on: user_id
 insert_permissions:
 - permission:
     backend_only: false
