--- a/docker-compose-bank-M1.yaml
+++ b/docker-compose-bank-M1.yaml
@@ -11,10 +11,13 @@ services:
       POSTGRES_PASSWORD: postgrespassword
   graphql-engine-bank-1:
     image: fedormelexin/graphql-engine-arm64:v2.1.0-beta.2
-    ports:
-      - '18099:8080'
     depends_on:
       - 'postgres-bank-1'
+    volumes:
+      - type: bind
+        source: ./certificates/cert.crt
+        target: /etc/ssl/certs/selfsigned.crt
+        read_only: true
     restart: always
     extra_hosts:
       - 'host.docker.internal:host-gateway'
@@ -29,17 +32,16 @@ services:
     build: 
       context: .
       dockerfile: ./Dockerfile.bank
-    ports:
-      - '1111:1111'
     environment:
-      NEXT_PUBLIC_HGE_ENDPOINT : http://graphql-engine-bank-1:8080
+      NEXT_PUBLIC_HGE_ENDPOINT : https://reverseproxy-bank:18099
       SKIP_PREFLIGHT_CHECK : 'true'
       HASURA_ADMIN_SECRET_HEADER_NAME : x-hasura-admin-secret
       HGE_ADMIN_SECRET : admin-secret
-      NEXT_PUBLIC_HOST_ADDRESS : http://localhost:1111
+      NEXT_PUBLIC_HOST_ADDRESS : https://localhost:1111
       BANK_ID : '044'
       BANK_CARD_ID : '036606'
-      PCC_BASE_ADDRESS : http://host.docker.internal:2222
+      PCC_BASE_ADDRESS : https://reverseproxy-bank:2222
+      NODE_TLS_REJECT_UNAUTHORIZED: "0" 
 #-------------------------
 #BANK 2 
   postgres-bank-2:
@@ -52,11 +54,14 @@ services:
 
   graphql-engine-bank-2:
     image: fedormelexin/graphql-engine-arm64:v2.1.0-beta.2
-    ports:
-      - '28099:8080'
     depends_on:
       - 'postgres-bank-2'
     restart: always
+    volumes:
+      - type: bind
+        source: ./certificates/cert.crt
+        target: /etc/ssl/certs/selfsigned.crt
+        read_only: true
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     environment:
@@ -70,17 +75,16 @@ services:
     build: 
       context: .
       dockerfile: ./Dockerfile.bank
-    ports:
-      - '1112:1111'
     environment:
-      NEXT_PUBLIC_HGE_ENDPOINT : http://graphql-engine-bank-2:8080
+      NEXT_PUBLIC_HGE_ENDPOINT : https://reverseproxy-bank:28099
       SKIP_PREFLIGHT_CHECK : true
       HASURA_ADMIN_SECRET_HEADER_NAME : x-hasura-admin-secret
       HGE_ADMIN_SECRET : admin-secret
-      NEXT_PUBLIC_HOST_ADDRESS : http://localhost:1112
+      NEXT_PUBLIC_HOST_ADDRESS : https://localhost:1112
       BANK_ID : '050'
       BANK_CARD_ID : '558773'
-      PCC_BASE_ADDRESS : http://host.docker.internal:2222
+      PCC_BASE_ADDRESS : https://host.docker.internal:2222
+      NODE_TLS_REJECT_UNAUTHORIZED: "0" 
 # ------------------------
 # PCC
   postgres-pcc:
@@ -93,11 +97,14 @@ services:
 
   graphql-engine-pcc:
     image: fedormelexin/graphql-engine-arm64:v2.1.0-beta.2
-    ports:
-      - '30000:8080'
     depends_on:
       - 'postgres-pcc'
     restart: always
+    volumes:
+      - type: bind
+        source: ./certificates/cert.crt
+        target: /etc/ssl/certs/selfsigned.crt
+        read_only: true
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     environment:
@@ -111,14 +118,25 @@ services:
     build: 
       context: .
       dockerfile: ./Dockerfile.pcc
-    ports:
-      - '2222:2222'
     environment:
-      NEXT_PUBLIC_HOST_ADDRESS: http://localhost:2222
-      HGE_ENDPOINT: http:// graphql-engine-pcc:7680
+      NEXT_PUBLIC_HOST_ADDRESS: https://localhost:2222
+      HGE_ENDPOINT: https://reverseproxy-bank:30000
       SKIP_PREFLIGHT_CHECK: true
       HASURA_ADMIN_SECRET_HEADER_NAME: x-hasura-admin-secret
       HGE_ADMIN_SECRET: admin-secret
+      NODE_TLS_REJECT_UNAUTHORIZED: "0" 
+  reverseproxy-bank:
+    build:
+      dockerfile: ./Dockerfile.bank.nginx
+    ports:
+        - 18099:18099
+        - 28099:28099
+        - 30000:30000
+        - 1111:1111
+        - 2222:2222
+        - 1112:1112
+    restart: always
+
 
 volumes:
   db_data_bank_1:
