--- a/apps/bank/.env
+++ b/apps/bank/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_HOST_ADDRESS=http://localhost:1111
 BANK_ID=044
 BANK_CARD_ID=036606
 PCC_BASE_ADDRESS=http://localhost:2222
+KEY=D635166546A576D5A7134743777217A
