--- a/nginx.ws1.conf
+++ b/nginx.ws1.conf
@@ -35,6 +35,9 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_pass_request_headers      on;            
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
         }
     }
 
@@ -47,6 +50,9 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_pass_request_headers      on;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
         }
     }
 
@@ -58,7 +64,11 @@ http {
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass_request_headers      on;
             proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+
         }
     }
     
