--- a/docker-compose-webshop-2-M1.yaml
+++ b/docker-compose-webshop-2-M1.yaml
@@ -35,7 +35,7 @@ services:
         \"type\":\"HS256\",
         \"key\": \"somerandompasswordsomerandompasswordsomerandompassword\",
         \"claims_format\": \"stringified_json\"}"
-      ACTION_BASE_ENDPOINT: https://host.docker.internal:3389
+      ACTION_BASE_ENDPOINT: http://web_shop_2_actions:3389
       ACTION_SECRET: action-secret
       EVENT_SECRET: event-secret
 #FRONT:
