--- a/docker-compose-psp-M1.yaml
+++ b/docker-compose-psp-M1.yaml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
 #PSP
-  postgres-psp:
+  postgres:
     image: postgres:12
     restart: always
     volumes:
@@ -21,7 +21,7 @@ services:
         target: /etc/ssl/certs/selfsigned.crt
         read_only: true
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres-psp:5432/postgres
+      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" 
       HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
@@ -32,7 +32,7 @@ services:
         \"type\":\"HS256\",
         \"key\": \"somerandompasswordsomerandompasswordsomerandompassword\",
         \"claims_format\": \"stringified_json\"}"
-      ACTION_BASE_ENDPOINT: https://host.docker.internal:3000
+      ACTION_BASE_ENDPOINT: http://psp:3000
       ACTION_SECRET: action-secret
       EVENT_SECRET: event-secret
   psp:
