--- a/docker-compose-psp-M1.yaml
+++ b/docker-compose-psp-M1.yaml
@@ -36,6 +36,7 @@ services:
       ACTION_SECRET: action-secret
       EVENT_SECRET: event-secret
   psp:
+    image: psp
     build: 
       context: .
       dockerfile: ./Dockerfile.psp
@@ -50,6 +51,7 @@ services:
 #-------------------------
 # BITCOIN PROVIDER
   btc-provider:
+    image:btc-pr
     build: 
       context: .
       dockerfile: ./Dockerfile.bitcoinprovider
@@ -65,6 +67,7 @@ services:
 #-------------------------
 # BANK PROVIDER 
   bank-provider:
+      image: bnk-pr
       build: 
         context: .
         dockerfile: ./Dockerfile.bankprovider
@@ -78,7 +81,8 @@ services:
 
 #-------------------------
 # PAYPAL PROVIDER 
-  paypal-provider:
+  paypal-provider: 
+      image: pp-provider
       build: 
         context: .
         dockerfile: ./Dockerfile.paypalprovider
@@ -91,6 +95,7 @@ services:
         PAY_PAL_BASE_URL: https://api-m.sandbox.paypal.com
         NODE_TLS_REJECT_UNAUTHORIZED: "0" 
   reverseproxy-psp:
+      image: rvprpsp
       build:
         dockerfile: ./Dockerfile.psp.nginx
       ports:
