--- a/docker-compose-bank-M1.yaml
+++ b/docker-compose-bank-M1.yaml
@@ -131,6 +131,8 @@ services:
       HASURA_ADMIN_SECRET_HEADER_NAME: x-hasura-admin-secret
       HGE_ADMIN_SECRET: admin-secret
       NODE_TLS_REJECT_UNAUTHORIZED: "0" 
+      KEY: D635166546A576D5A7134743777217A
+      
   reverseproxy-bank:
     image: bankrvsprox
     build:
